# halucinator

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.ci  Dockerfile.ghidra  MANIFEST.in  README.md  REDACTED.md  WITHDRAWN.md  activate.sh  build_qemu.sh  dependencies.md  install_deps.sh  pyproject.toml  pytest.ini  run-pytest.sh  run_backend_matrix.sh  run_hal_docker.sh  setup.sh
.github/workflows/: security.yml  virtual-environment-tests.yml
demo/opendps/: PROVENANCE.md  opendps.elf  run_demo.sh
doc/: debugging.md  snapshot_restore.md
doc/tutorial/: 0_Preqs.md
extra_tools/: README.md  add_handler_path.py  install_aux_tools.sh  parse_bp_handlers.py  remove_handler_paths.py  run_parse_handlers.py  vscode-extension-installer.sh
src/: SymbolBrowser.py  requirements.txt  setup.py
src/halucinator/: __init__.py  gui.py  hal_config.py  hal_log.py  hal_stats.py  main.py  markers.py  symbol_browser.py
src/halucinator/backends/: __init__.py  avatar2_backend.py  gdb_proxy.py  ghidra_backend.py  hal_backend.py  libafl_qemu_backend.py  qemu_backend.py  renode_backend.py  renode_mmio.py  unicorn_backend.py
src/halucinator/bp_handlers/: bp_handler.py  debugger.py  intercepts.py
src/halucinator/config/: elf_program.py  memory_config.py  symbols_config.py  target_archs.py
src/halucinator/debug_adapter/: debug_adapter.py  variables.py
src/halucinator/diagnostics/: README.md  __init__.py  _common.py  caller_histogram.py  mmio_region_sampler.py  mmu_fault_introspect.py  modbus_probe.py  probe_at_pc.py  snapshot_lab.py
src/halucinator/external_devices/: IEEE802_15_4.py  adc.py  basic_io.py  bpv5_panel.py  bpv5_terminal.py  canary.py  canary_serial_uds.py  console_ty.py  ethernet_arp_request.py  ethernet_virt_hub.py  ethernet_wireless.py  gpio.py  host_ethernet.py  host_ethernet_server.py  ioserver.py  opendps.py  publish_topic.py  serial_tunnel.py  serial_uds.py  snapshotable.py  trigger_interrupt.py  tty.py  uart.py  utty.py  vn8200xp.py
src/halucinator/mcp/: README.md  __init__.py  __main__.py  _codec.py  _worker.py  manager.py  server.py  session.py
src/halucinator/peripheral_models/: adc.py  at91.py  basic_io.py  canary.py  dos_fs_model.py  ethernet.py  generic.py  gpio.py  host_fs.py  ieee802_15_4.py  interrupts.py  peripheral.py  peripheral_server.py  sd_card.py  spi.py  tcp_stack.py  timer_model.py  uart.py  utty.py
src/halucinator/peripherals/: __init__.py  hal_peripheral.py
src/halucinator/qemu_targets/: __init__.py  arm64_qemu.py  arm_qemu.py  armv7m_qemu.py  hal_qemu.py  mips_qemu.py  powerpc64_qemu.py  powerpc_qemu.py  qemu_connect.py  x86_qemu.py
src/halucinator/snapshot/: __init__.py  device_layer.py  peripheral_registry.py  persist.py  system_snapshot.py
src/halucinator/util/: cortex_m_helpers.py  elf_sym_hal_getter.py  get_funct_name_MMIO.py  hexyaml.py  parse_symbol_tables.py  profile_hals.py
test/: BACKEND_MATRIX.md  conftest.py
test/STM32/example/: Uart_Hyperterminal_IT_O0_addrs.yaml  Uart_Hyperterminal_IT_O0_config.yaml  Uart_Hyperterminal_IT_O0_memory.yaml  run.sh  run_test.bash
test/bpv5/: PROVENANCE.md  README.md  bpv5_addrs.yaml  bpv5_addrs_shifted.yaml  bpv5_config.yaml  bpv5_handlers.py  bpv5_memory.yaml  bpv5_terminal.py  run.sh  run_tests.bash  send_enter.py
test/firmware-rehosting/bpv5/: DEMO.md  INTERFACES.md  PROVENANCE.md  README.md  bpv5_addrs.yaml  bpv5_config.yaml  bpv5_config_lcdfb.yaml  bpv5_config_uart_nmea.yaml  bpv5_memory.yaml  bpv5_memory_uart_nmea.yaml  run.sh  run_adcpsu_test.bash  run_dio_test.bash  run_i2c_test.bash  run_infrared_test.bash  run_jtag_test.bash  run_lcd.sh  run_lcdfb_test.bash  run_led_test.bash  run_nand_test.bash  run_onewire_test.bash  run_scope_test.bash  run_spi_test.bash  run_tests.bash  run_twowire_test.bash  run_uart_nmea_test.bash  run_uart_test.bash
test/firmware-rehosting/p2im-drone/: Drone.elf  PROVENANCE.md  README.md  argfile.txt  build_drone.sh  drone.py  drone_addrs.yaml  drone_config.yaml  drone_intercepts.yaml  drone_memory.yaml  run.sh  run_tests.bash
test/multi_arch/arm32/: run.sh  run_tests.bash  test_uart_addrs.yaml  test_uart_config.yaml  test_uart_memory.yaml
test/multi_arch/arm64/: run.sh  run_tests.bash  test_uart_addrs.yaml  test_uart_config.yaml  test_uart_memory.yaml
test/multi_arch/firmware_src/: Makefile  link-arm32.ld  link-arm64.ld  link-mips.ld  link-ppc64.ld  support.c  test_uart.c
test/multi_arch/mips/: run.sh  run_tests.bash  test_uart_addrs.yaml  test_uart_config.yaml  test_uart_memory.yaml
test/multi_arch/ppc/: run.sh  run_tests.bash  test_uart_addrs.yaml  test_uart_config.yaml  test_uart_memory.yaml
test/multi_arch/ppc64/: run.sh  run_tests.bash  test_uart_addrs.yaml  test_uart_config.yaml
test/multi_arch_irq/arm32/: run.sh  run_tests.bash  test_irq_addrs.yaml  test_irq_config.yaml  test_irq_memory.yaml
test/multi_arch_irq/arm64/: run.sh  run_tests.bash  test_irq_addrs.yaml  test_irq_config.yaml  test_irq_memory.yaml
test/multi_arch_irq/cortex_m/: run.sh  run_tests.bash  test_irq_addrs.yaml  test_irq_config.yaml  test_irq_memory.yaml
test/multi_arch_irq/cortex_m_hwwrite_irq/: run.sh  run_tests.bash  test_irq_addrs.yaml  test_irq_memory.yaml
test/multi_arch_irq/cortex_m_wfi/: run.sh  run_tests.bash  test_irq_config.yaml  test_irq_memory.yaml
test/multi_arch_irq/mips/: run.sh  run_tests.bash  test_irq_addrs.yaml  test_irq_config.yaml  test_irq_memory.yaml
test/multi_arch_irq/ppc/: run.sh  run_tests.bash  test_irq_addrs.yaml  test_irq_config.yaml  test_irq_memory.yaml
test/multi_arch_irq/ppc64/: run.sh  run_tests.bash  test_irq_addrs.yaml  test_irq_config.yaml  test_irq_memory.yaml
test/multi_arch_irq/x86/: run.sh  run_tests.bash  test_irq_addrs.yaml  test_irq_config.yaml  test_irq_memory.yaml
test/pytest/: conftest.py  test_basic.py  test_gdb_server.py  test_gdb_server_integration.py  test_hal_config.py  test_hal_config_extended.py  test_hal_log.py  test_hal_stats.py  test_main.py  test_markers.py
test/tools/: backend_matrix.sh
tools/avatar-qemu-overlay/: README.md  apply.sh
(+345 files in other folders)
